--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-git+https://github.com/Rapptz/discord.py
-PyNaCl==1.3.0
-dnspython==1.16.0
-async-timeout==3.0.1
+discord.py
 numpy
 datetime
-setuptools
-pandas
