--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: '2'
 services:
   hcvsg-app:
+    environment:
+      - CLIENT_TOKEN=${CLIENT_TOKEN}
     build: .
     ports:
       - "5000:5000"
